# replay

./: .gitignore  .gitmodules  .mcp.json  CLAUDE_CODE_MIGRATION.md  FIX_NODE_PROCESSOR_UPDATE.md  README.md  REFACTORING_SUMMARY.md  outpudebut.txt  output.txt  pyproject.toml  pytest.ini  replay.py  test_claude_code_migration.py  tt-metal-api-reference.xml  tt-metal-kernel-apis.md
core/: __init__.py  setup.py
core/backend/: README.md  __init__.py  anthropic_api_backend.py  claude_code_backend.py  claude_code_config.py  client_wrapper.py  conditional_node_processor.py  doc_node_processor.py  exit_node_processor.py  git_manager.py  llm_backend.py  mcp_manager.py  mock_anthropic.py  prompt_node_processor.py  prompt_node_processor_xml.py  registry.py  replay.py  run_node_processor.py  template_node_processor.py
core/backend/client/: __init__.py  claude_code_client_wrapper.py  history_util.py  mock_anthropic.py
core/backend/examples/: anthropic_tool_use_example.py  tool_call_detection_example.py
core/backend/processors/: __init__.py  base_processor.py  conditional_node_processor.py  doc_node_processor.py  exit_node_processor.py  fix_node_processor.py  prompt_node_processor.py  registry.py  run_node_processor.py  template_node_processor.py
core/backend/system_prompts/: client_instructions_indentify_issue.txt  client_instructions_with_json.txt  client_instructions_with_json_anthropic.txt  client_instructions_with_xml.txt
core/backend/tools/: README.md  __init__.py  base.py  tool_registry.py
core/code_to_json/: README.md  __init__.py  code_to_json.py
core/code_to_json/output/: output.json
core/code_to_json/tests/: test_code_to_json.py
core/dir_preprocessing/: README.md  __init__.py  dir_preprocessing.py
core/dir_preprocessing/tests/: example_usage.py  test_dir_preprocessing.py
core/helpers/: utils.py
core/helpers/combine_files/: combine_files.py
core/json_to_code/: README.md  __init__.py  json_to_code.py
core/json_to_code/tests/: test1.json  test2.json  test3.json  test_json_to_code.py
core/prompt_preprocess2/: README.md  __init__.py  epic.json  epic_schema.json  parse_prompt.py  pass_build_graph.py  pass_lower_debug_loop.py  pass_lower_prompt_file_refs.py  pass_process_ro_markers.py  pass_registry.py  passes.py  processor3.py
core/prompt_preprocess2/ir/: __init__.py  control_flow.py  epic_ir_temp.py  graph_visualization.py  ir.py  markers.py  test2.py  test3.py
core/prompt_preprocess2/passes/: README.md  __init__.py  pass_insert_exit_node.py  pass_lower_debug_loop.py  pass_lower_prompt_file_refs.py  pass_process_ro_markers.py  pass_registry.py
core/prompt_preprocess2/tests/: PROMPT_README.md  prompt10.txt  prompt3.txt  prompt5.txt  (+8 more)
core/prompt_preprocessing/: README.md  __init__.py  prompt_preprocessing.py
examples/: basic_usage.py  step_by_step_execution.py
examples/demos/: log.txt  run_cosh_combine.sh  run_cosh_sfpu.sh  run_create_combine.sh  run_exp_to_acos_demo.sh
examples/docs/: example_compute_llk_where.cpp  example_exp_sfpu_unfolded.cpp  host_api_py.md  kernel_api_packer.md  kernel_api_sfpu.md  tanh_sfpu_unfolded.cpp  tt-metal-api-reference.xml  tt-metal-kernel-apis.md
examples/prompts/: combine_op_llk_template.txt  create_cosh_combine_llk_calls.txt  create_cosh_sfpu.txt  create_exp_operation.txt  create_new_op_from_generic.txt  create_new_op_test_2.txt  test2_multi_prompt.txt
examples/templates/: python_single_file.py
examples/templates/ttnn/newop_cpu/: CMakeLists.txt  new_op_pybind.hpp
examples/utils/: update_template.py
helpers/combine_files/: README.md
input_const/: OLD_llm_output_schema.json  client_instructions.txt  client_instructions_with_json.txt  llm_json_schema.json  llm_output_json_example.json
input_const/docs/: kernel_api.md
prompts/: data_1.txt  hello_world.txt  yolo.json
replay_output/: README.md
tests/: __init__.py  test_prompt_node_execution.py  test_replay_cli.py
tests/cli_project/: expected_client_calls.json  expected_files_all.json  expected_files_step_by_step.json  prompt.txt
tools/: README.md  TOOLS_INSTALLATION_GUIDE.md  TOOLS_USAGE_GUIDE.md  setup_tools.py  tt-metal-mcp.json
(+574 files in other folders)
